Change History
==============

1.7.23 (unreleased)
-------------------

- Nothing changed yet.


1.7.22 (2017-02-09)
-------------------

- Fixed UnicodeDecodeError when vocabulary value is a non-ascii string.
  This could happen in selection and multi selection fields.
  [maurits]

- change captcha verification message for #186
  [tkimnguyen]

- add jQuery 1.9+ support with `.delegate()`. This also ensures
  jQuery 1.4.2+ and Plone 4.1+ compatibility. Fixes #188
  [petschki]


1.7.21 (2016-12-06)
-------------------

- Transform value to unicode before translating. Fix #182
  [pbauer]


1.7.20 (2016-11-22)
-------------------

- Fixed showing translations of help text.  Since security release
  1.7.18, help text was showing up with only the message id, for
  example ``help_placeholder``.
  Fixes `issue #178 <https://github.com/smcmahon/Products.PloneFormGen/issues/178>`_.
  [maurits]

- Use formActionOverride action in embedded view [fRiSi]

- Updated Spanish translations
  [macagua]

- locales rebuild adding more new strings for Gettext files
  [macagua]

- Enabled the Plone Theme Classic for loadtest profile
  [macagua]


1.7.19 (2016-05-01)
-------------------

- Updated history: 1.7.18 was accidentally released as version 1.7.19.
  Both versions are valid and contain the fix.  We recommend using
  1.7.19.  [maurits]


1.7.18 (2016-05-01)
-------------------

- CGI escape field help (description); prevent method call.
  Eliminates XSS vulnerability that could be exploited by users with the ability
  to create forms.
  [smcmahon]

- Load widget specific css on quickedit form.
  [maurits]


1.7.17 (2015-06-15)
-------------------

- Check recipient name as well as address in mailing tests;
  deal with commas in recipient name. Thanks, uschwarz.
  [smcmahon]

- Fix misleading test in exportimport.
  [smcmahon]

- Change edit.gif to edit.png in quickedit.pt and fg_savedata [ableeb]

- fixed loading of widget javascripts in quickedit (#95) [reinhardt]
